--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,8 @@
-<div class="button">
-    <a href="contact" class="link">Contact</a>
-</div>
+<nav class="header-nav">
+    <ul>
+        <li><a href="/contact" class="header-button">Contact</a></li>
+        <li><a href="/research" class="header-button">Research</a></li>
+        <li><a href="/teaching" class="header-button">Teaching</a></li>
+        <li><a href="/bio" class="header-button">Bio</a></li>
+    </ul>
+</nav>
