--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,4 @@
-<nav class="header-nav">
-    <ul>
-        <li><a href="/contact" class="header-button">Contact</a></li>
-        <li><a href="/research" class="header-button">Research</a></li>
-        <li><a href="/teaching" class="header-button">Teaching</a></li>
-    </ul>
-</nav>
+
+<h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+
+<h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
